--- a/src/Product.css
+++ b/src/Product.css
@@ -12,6 +12,13 @@
     z-index: 1;
 }
 
+.product:hover {
+    transform: perspective(10px) translateZ(0);
+    box-shadow: 0 0 1px rgb(0 0 0 / 0%);    
+    transition-duration: 0.3s;
+    box-shadow: inset 0 0 0 4px #f8a60e, 0 0 1px rgb(0 0 0 / 0%);
+  }
+
 .product > img {
     max-height: 200px;
     width: 100%;
@@ -38,4 +45,10 @@
     margin-top: 10px;
     border-color: #a88734 #9c7e31 #846a29;
     color: #111;
+}
+
+.product > button:hover {
+    background-color: #2098D1;
+    border-color: #6476da #3a4899 #11173b;
+    color:white;
 }
